--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.1",
     "react-social-icons": "^6.24.0",
+    "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
     "swiper": "^11.2.6",
     "tailwindcss-animate": "^1.0.7"
