--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.509.0",
     "pdfjs-dist": "4.8.69",
     "react": "^19.0.0",
@@ -20,6 +23,7 @@
     "react-router-dom": "^7.5.1",
     "react-social-icons": "^6.24.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "swiper": "^11.2.6",
     "tailwindcss-animate": "^1.0.7"
